# sanitify

./: .gitignore  README.md  pyproject.toml  run_demo.py
.github/workflows/: ci.yml
src/sanitify/: __init__.py  datacleaner.py
src/sanitify/cleaning/: deterministic.py
src/sanitify/core/: profiler.py  quality.py  scoring.py  suggestions.py
src/sanitify/report/: exporter.py
tests/: test_profile.py
